WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
158015
[Font Loading] ASSERT if calling FontFace.loaded twice with a garbage collection between them
https://bugs.webkit.org/show_bug.cgi?id=158015
Summary
[Font Loading] ASSERT if calling FontFace.loaded twice with a garbage collect...
Myles C. Maxfield
Reported
2016-05-23 23:08:11 PDT
[Font Loading] ASSERT if calling FontFace.loaded twice with a garbage collection between them
Attachments
Patch
(6.06 KB, patch)
2016-05-23 23:15 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews102 for mac-yosemite
(1.05 MB, application/zip)
2016-05-23 23:45 PDT
,
Build Bot
no flags
Details
Patch
(6.33 KB, patch)
2016-05-24 15:54 PDT
,
Myles C. Maxfield
darin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2016-05-23 23:15:14 PDT
Created
attachment 279628
[details]
Patch
Build Bot
Comment 2
2016-05-23 23:45:28 PDT
Comment on
attachment 279628
[details]
Patch
Attachment 279628
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/1373103
New failing tests: fast/text/font-loading-csp-block-all.html fast/text/css-font-loading-arraybuffer.html
Build Bot
Comment 3
2016-05-23 23:45:31 PDT
Created
attachment 279631
[details]
Archive of layout-test-results from ews102 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-yosemite Platform: Mac OS X 10.10.5
Myles C. Maxfield
Comment 4
2016-05-24 15:54:55 PDT
Created
attachment 279716
[details]
Patch
Darin Adler
Comment 5
2016-05-25 03:39:33 PDT
Comment on
attachment 279716
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=279716&action=review
> Source/WebCore/bindings/js/JSFontFaceCustom.cpp:38 > JSC::JSValue JSFontFace::loaded(JSC::ExecState& state) const
How can we get rid of the need for a custom binding for this function?
Myles C. Maxfield
Comment 6
2016-05-25 11:05:52 PDT
Comment on
attachment 279716
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=279716&action=review
>> Source/WebCore/bindings/js/JSFontFaceCustom.cpp:38 >> JSC::JSValue JSFontFace::loaded(JSC::ExecState& state) const > > How can we get rid of the need for a custom binding for this function?
We would have to have some way of associating the Promise inside the FontFace class with the promise inside the JSFontFace class.
Myles C. Maxfield
Comment 7
2016-05-25 12:06:55 PDT
Committed
r201394
: <
http://trac.webkit.org/changeset/201394
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug