[Font Loading] ASSERT if calling FontFace.loaded twice with a garbage collection between them https://bugs.webkit.org/show_bug.cgi?id=158015

Reviewed by Darin Adler.

Source/WebCore:

The following scenario may occur:

1. We create a FontFace object
2. We create an associated JSFontFace object
3. We start loading the FontFace, which causes an extra ref to hang around until loading finishes
4. Javascript calls the "loaded" attribute on the FontFace, which saves a promise inside the FontFace
5. The FontFace goes out of scope in Javascript
6. A garbage collection occurs, causing us to delete the JSFontFace object
7. Javascript then encounters the FontFace object without first going through a reference to a JSFontFace.
It can do this via iterating through a FontFaceSet. We respond to this situation by creating a new
JSFontFace object and associating it with the existing FontFace.
8. Javascript calls the "loaded" attribute

In this situation, the newer JSFontFace object is out of sync with the older FontFace object. In
particular, the FontFace has a saved promise, but the JSFontFace doesn't know about it. Therefore,
the JSFontFace should be flexible to the presence of this member.

Test: fast/text/font-face-crash-2.html

* bindings/js/JSDOMPromise.h:
(WebCore::DOMPromise::deferredWrapper):
* bindings/js/JSFontFaceCustom.cpp:
(WebCore::JSFontFace::loaded):
* css/FontFace.h:

LayoutTests:

* fast/text/font-face-crash-2-expected.txt: Added.
* fast/text/font-face-crash-2.html: Added.

Canonical link: https://commits.webkit.org/176197@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201394 268f45cc-cd09-0410-ab3c-d52691b4dbfc